# scale-library

./: .gitignore  .gitmodules  DEVELOPMENT.md  README.md  build.sh  pyproject.toml  release.sh  scale-index.csv
.github/workflows/: scala-analysis.yml
data-package/: README.md  pyproject.toml
data-package/src/scale_library/: __init__.py
npm-package/: package.json  scale-cents.json  tsconfig.json  vitest.config.ts
npm-package/src/: index.ts
scales/cairo-congress/: CD01_01_hijaz_Egypt.scl  CD01_02_hijaz_Egypt.scl  CD01_03_hijaz_Egypt.scl  CD01_04_hijaz_Egypt.scl  CD01_05_Egypt.scl  CD01_06_Egypt.scl  CD01_07_Egypt.scl  CD01_08_Egypt.scl  CD01_09_bayati_Egypt.scl  CD01_10_bayati_Egypt.scl  CD01_11_bayati_Egypt.scl  CD01_12_bayati_Egypt.scl  CD01_13_bayati_Egypt.scl  CD01_14_saba_Egypt.scl  CD01_15_saba_Egypt.scl  CD01_16_saba_Egypt.scl  CD01_17_rast_Egypt.scl  CD01_18_rast_Egypt.scl  CD01_19_rast_Egypt.scl  CD01_20_rast_Egypt.scl  CD02_01_Egypt.scl  CD02_02_Egypt.scl  CD02_03_Egypt.scl  CD02_04_Egypt.scl  CD02_05_Egypt.scl  CD02_06_Egypt.scl  CD02_07_Egypt.scl  CD02_08_Egypt.scl  CD02_09_Egypt.scl  CD02_10_Egypt.scl  CD02_11_husayni_Egypt.scl  CD02_12_husayni_Egypt.scl  CD02_13_Egypt.scl  CD02_14_Egypt.scl  CD02_15_Egypt.scl  CD02_16_Egypt.scl  CD02_17_Egypt.scl  CD02_18_Egypt.scl  CD02_19_Egypt.scl  CD03_01_Egypt.scl  (+293 more)
scales/damusc/: Angola_Chisende_10618.scl  Angola_Mupeku_10500.scl  Brazil_Pifano.scl  Brazil_Pifano_01.scl  Brazil_Pifano_03.scl  Burkina_Faso_Sambla_01.scl  Cambodia_01.scl  (+177 more)
tests/: test_build.py  test_contrib.py  test_posts.py  test_similar.py
(+4492 files in other folders)
