[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scale_library"]

[project]
name = "scale-library"
version = "0.0.0"
description = "Generate scale-library scl files from sources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "tuning-library",
  "pandas",
  "sympy",
  "jinja2",
  "requests",
  "numpy",
  "pyyaml",
  "markdown>=3.10.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["src/scale_library/website/constructions", "tests"]
pythonpath = ["src"]
