[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scale_library"]

[tool.hatch.build.targets.wheel.force-include]
"../scales" = "scale_library/scales"
"../scale-index.csv" = "scale_library/scale-index.csv"

[project]
name = "scale-library"
version = "1.2.0"
description = "A library of microtonal scales with sources attributed"
authors = [
  { name = "Naren Ratan" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://scalelibrary.org"
Repository = "https://github.com/narenratan/scale-library"
